--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Rockyer</title>
 </head>
 <body>
+	<table>
 		<thead>
 			<tr>
 				<th>方案</th>
@@ -29,5 +30,6 @@
 				<td>8</td>
 			</tr>
 		</tbody>
+	</table>
 </body>
 </html>
