--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
 <title>Rockyer</title>
 </head>
 <body>
-	<table>
+	<table width="400px" border="1" cellpadding="1" cellspacing="1">
 		<thead>
 			<tr>
-				<th>你</th>
-				<th>猜</th>
-				<th>我</th>
-				<th>现</th>
-				<th>在</th>
-				<th>在</th>
-				<th>干</th>
-				<th>嘛</th>
+				<th>名称</th>
+				<th>年龄</th>
+				<th>性别</th>
+				<th>电话</th>
+				<th>住址</th>
+				<th>身高</th>
+				<th>体重</th>
+				<th>时间</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
-				<td>妥</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td>
+				<td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td>
 			</tr>
 			<tr>
-				<td>妥</td><td>b</td><td>c</td><td>d</td><td>e</td><td>f</td><td>g</td><td>h</td>
+				<td>a</td><td>b</td><td>c</td><td>d</td><td>e</td><td>f</td><td>g</td><td>h</td>
 			</tr>
 			<tr>
-				<td>想</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td>
+				<td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td>
 			</tr>
 			<tr>
-				<td>你</td><td>b</td><td>c</td><td>d</td><td>e</td><td>f</td><td>g</td><td>h</td>
+				<td>a</td><td>b</td><td>c</td><td>d</td><td>e</td><td>f</td><td>g</td><td>h</td>
 			</tr>
 		</tbody>
 	</table>
