--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Rockyer</title>
 </head>
 <body>
-	<table width="400px" border="1" cellpadding="1" cellspacing="1">
+	<table padding="auto" width="400px" border="1" cellpadding="1" cellspacing="1">
 		<thead>
 			<tr>
 				<th>名称</th>
