--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@ ul li:nth-child(8){transform:rotateY(315deg) translateZ(300px);}
 </head>
 <body>
 	<ul>
-    	<li><img src="shi1.jpeg" />1</li>
-        <li><img src="shi2.jpeg" />2</li>
-        <li><img src="shi3.jpg" />3</li>
-        <li><img src="shi4.jpeg" />4</li>
-        <li><img src="shi5.jpg" />5</li>
-        <li><img src="shi7.png" />6</li>
-        <li><img src="shi8.jpg" />7</li>
-        <li><img src="shi9.jpeg" />8</li>  
+    	<li><img src="shi1.jpeg" /></li>
+        <li><img src="shi2.jpeg" /></li>
+        <li><img src="shi3.jpg" /></li>
+        <li><img src="shi4.jpeg" /></li>
+        <li><img src="shi5.jpg" /></li>
+        <li><img src="shi7.png" /></li>
+        <li><img src="shi8.jpg" /></li>
+        <li><img src="shi9.jpeg" /></li>  
     </ul>
 </body>
 </html>
